# architecture-otus-3

./: pyproject.toml
architecture_otus_3/: server_thread.py
tests/: test_server_thread.py
