[tool.poetry]
name = "architecture-otus-3"
version = "0.1.0"
description = ""
authors = ["Safintim <temp@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"
mypy = "^1.7.1"
pytest-mock = "^3.12.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]
no-sections = false
lines-between-types = 1

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = [
    ".venv",
    ".github",
]